# L-CAD

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  build.gradle  contributors.txt  index.html  makefile  nuklear.h  params.json
L-CAD/: .gitignore  CMakeLists.txt  build.gradle  build.xml  log.txt  makefile  settings.gradle
L-CAD/gradle/wrapper/: gradle-wrapper.properties
L-CAD/graphs/: SR.graph
L-CAD/io/lonelyrobot/igbc/lcad/simulation/: Connection.java
L-CAD/lcadengine/: CMakeLists.txt  README.md  main.c
L-CAD/lcadengine/include-private/utils/: fastlist.h
L-CAD/lcadengine/include/lcadengine/: GenericLogicInterface.h  LogicConnection.h  Simulation.h  dispatcher.h  fastlist.h  graphLoader.h  logicGraph.h  logicTable.h  logictable.hpp
L-CAD/lcadengine/include/lcadengine/utils/: hashmap.h
L-CAD/lcadengine/src/: GenericLogicInterface.cpp  Simulation.cpp  dispatcher.c  dispatcher.h  genericlogic.c  genericlogic.h  graphLoader.c  graphLoader.h  logicGraph.c  logicGraph.h  logicSolver.c  logicSolver.h  logicTable.c  logictable.cpp  main.c
L-CAD/lcadengine/src/utils/: LICENCE.txt  fastlist.c  fastlist.h  hashmap.c  hashmap.h  lcadLogger.c  lcadLogger.h  thpool.c  thpool.h
L-CAD/lcadengine/src/utils/hashmap/: LICENCE.txt
L-CAD/lcadengine/tests/: CMakeLists.txt  minUnit.h  test_hashmap.h  tests.c
L-CAD/lcadui/: README.md
L-CAD/lcadui/include-private/: NK_Wrapper.hpp  nuklear_sdl_gl3.h
L-CAD/lcadui/src/: main.cpp
L-CAD/picad/: CMakeLists.txt
L-CAD/picad/src/: IO.h  main.c
L-CAD/src/io/lonelyrobot/igbc/lcad/ports/: IOPort.java
L-CAD/src/io/lonelyrobot/igbc/lcad/simulation/: Connection.java  GenericLogicInterface.java  GenericLogicInterfaceHandler.java  LogicConnection.java  LogicGate.java  Simulation.java  SimulationIO.java
L-CAD/src/io/lonelyrobot/igbc/lcad/simulation/gates/: LogicGate.java  LogicGateFactory.java
L-CAD/src/io/lonelyrobot/igbc/lcad/simulation/ports/: LogicPortGate.java  LogicPortInterface.java  PortFactory.java
L-CAD/src/io/lonelyrobot/igbc/lcad/simulation/redundant/: Connection.java  LogicGate.java  LogicGateException.java  Simulation.java  SimulationIO.java  SimulationUtils.java
L-CAD/src/io/lonelyrobot/igbc/lcad/simulation/workers/: WorkDispatcher.java  WorkDispatcherInterface.java  Worker.java  WorkerInterface.java
L-CAD/src/io/lonelyrobot/igbc/lcad/ui/: LCad.java
gatesim/: .gitignore  gate_logic.py  gatesim.py
gatesim/src/io/lonelyrobot/igbc/gatesim/: Gatesim.java
gatesim/src/io/lonelyrobot/igbc/gatesim/simulation/: LogicGate.java  LogicGateException.java  Simulation.java  SimulationUtils.java
gatesim/src/io/lonelyrobot/igbc/gatesim/ui/: Gatesim.java
gatesim/src/io/lonelyrobot/igbc/lcad/simulation/: LogicGate.java  LogicGateException.java  Simulation.java
gatesim/ui/: gatesim.ui
graphs/: D.graph  PCSR.graph  counter.graph
logic_engine/: .gitignore
src/: CMakeLists.txt
src/io/lonelyrobot/igbc/lcad/simulation/: Simulation.java  SimulationUtils.java
src/io/lonelyrobot/igbc/lcad/ui/: Gatesim.java
src/lcadengine/: CMakeLists.txt  dispatcher.c  dispatcher.h  genericlogic.h  graphLoader.h  logicGraph.h  main.c
src/lcadengine/base/: genericlogic.c  logicGraph.c  logicGraph.h
src/lcadengine/sim/: dispatcher.c  dispatcher.h  logicSolver.c  logicSolver.h
src/lcadengine/tests/: CMakeLists.txt  main.c  test_hashmap.h  tests.c
src/lcadengine/utils/: fastlist.h  lcadLogger.h
src/picad/: CMakeLists.txt  IO.c  IO.h  fileparser.c  fileparser.h  main.c  wires.c  wires.h
ui/: gatesim.ui
